# DRAFTS-UC

./: .dockerignore  .gitignore  ALMA.py  CHANGELOG.md  DOCKER_QUICKREF.md  Dockerfile  Effelsberg.py  Effelsberg_original.py  FAST.py  IMPLEMENTACION_CHUNKING_DRAFTS.md  LICENSE  LIMPIEZA_CONFIG_RESUMEN.py  MILLIMETER_STRATEGIES_README.md  README-old-Drafts.md  README.md  commands.txt  config.yaml  config_rapido.py  d-center-main.py  d-resnet-main.py  docker-compose.yml  ejemplo_config_simple.py  fits_reader.py  main.py  plot_waterfall_fits.py  pyproject.toml  requirements.txt  sonar-project.properties  test_chunk_debug.py  test_dynamic_dm_range.py  test_millimeter_execution.py  test_millimeter_strategies.py
.claude/: settings.local.json
.github/workflows/: build.yml
CheckRes/: search_ddmt_res50.py
DRAFTS/: __init__.py  aliases.py  astro_conversions.py  candidate.py  candidate_utils.py  config.py  config_auto.py  config_simple.py  config_simplified.py  csv_utils.py  dedispersion.py  detection_engine.py  detection_utils.py  file_utils.py  filterbank_io.py  frequency_utils.py  image_utils.py  io.py  metrics.py  models.py  pipeline.py  pipeline_core.py  pipeline_old.py  preprocessing.py  rfi_mitigation.py  rfi_utils.py  slice_len_utils.py  snr_utils.py  summary_utils.py  user_config.py  utils.py  visualization.py
DRAFTS-chunks/: pipeline.py  preprocessing.py
DRAFTS/alma/: __init__.py  config.py  dedispersion.py  io.py  pipeline.py
DRAFTS/analysis/: __init__.py  consistency_fixes.py  snr_utils.py
DRAFTS/core/: auto_slice_len.py  config.py  pipeline.py
DRAFTS/detection/: __init__.py  astro_conversions.py  model_interface.py  pipeline_utils.py  utils.py
DRAFTS/input/: __init__.py  data_loader.py  io.py
DRAFTS/io/: candidate_utils.py  (+1 more)
Guides/: AJUSTE_DIMENSIONES_COMPOSITE.md  ANALISIS_SISTEMA_MULTI_BANDA.md  CONSISTENCIA_DM_DRAFTS_ORIGINAL.md  CONTINUIDAD_TEMPORAL_IMPLEMENTADA.md  CORRECCIONES_COMPOSITE_PLOTS.md  CORRECCIONES_CONSISTENCIA_DM_SNR.md  CORRECCIONES_IMPLENTADAS.md  CORRECCIONES_TEMPORALES_RESUMEN.md  CORRECCION_SNR_CSV_COMPOSITE.md  CORRECCION_TIEMPOS_ABSOLUTOS_CHUNKS.md  CORRECCION_TIEMPO_ABSOLUTO.md  GUIA_CONFIGURACION_ASTRONOMIA.py  GUIA_CONFIG_SIMPLE.md  IMPLEMENTACION_PATCHES_POR_CHUNK.md  IMPLEMENTACION_RANGOS_FRECUENCIA.md  MEJORAS_CSV_IMPLEMENTADAS.md  OPTIMIZACIONES_PIPELINE_RESUMEN.md  ORGANIZACION_CONFIG_FINAL.md  README_CHUNKING.md  RESUMEN_DM_DINAMICO.py  RFI_CLEANING_GUIDE.md  RFI_IMPLEMENTATION_SUMMARY.md  SISTEMA_AUTOMATICO_SLICE_LEN_RESUMEN.md  SISTEMA_DM_DINAMICO_INTEGRADO.md  guia_switches_control.py  guia_uso_variables_dm_dinamico.py
Results-polarization/: summary.json  summary_20251123_022345.json  summary_master.json
Results-test-refactor/: 3096_0001_00_8bit.candidates.csv  summary.json
Tests-Pulse-big/: 2017-04-03-08-16-13_142_0003_t39.977.candidates.csv  2017-04-03-08_16_13_142_0006_t10.882_t25.829.candidates.csv  2017-04-03-08_55_22_153_0006_t23.444.candidates.csv  2017-04-03-12_47_05_0002.candidates.csv  2017-04-03-12_56_05_230_0003_t36.548.candidates.csv  summary.json  summary_20251023_001356.json  summary_20251023_001821.json  summary_20251023_002105.json  summary_20251023_002713.json  summary_20251023_003448.json  summary_20251023_003742.json  summary_20251023_003954.json  summary_master.json
advanced-config/: logging.yaml  models.yaml  performance.yaml  visualization.yaml
docs/: CAMBIOS_OPTIMIZACION_CARPETAS.md  CHUNK_IN_TITLES_SUMMARY.md  CORRECCION_CHUNKS_WITH_FRBS.md  ChunksWithFRBs_README.md  RESUMEN_CHUNKS_WITH_FRBS.md  SISTEMA_AUTOMATICO.md
drafts/: candidate.py  config.py  data_loader.py  detection_engine.py  dynamic_dm_range.py  estructure.txt  filterbank_io.py  image_utils.py  pipeline.py  snr_utils.py  user_config.py
effelsberg/: __main__.py  candidate.py  config.py  dedispersion.py  image_utils.py  io.py  pipeline.py  pipeline_old.py
fusion-tests/: 2017-04-03-08-16-13_142_0003_t39.977.candidates.csv  2017-04-03-12_56_05_230_0002_t2.3_t17.395.candidates.csv  3096_0001_00_8bit.candidates.csv  FRB20180301_0001.candidates.csv  FRB20201124_0009.candidates.csv  summary.json  summary_20250916_035245.json  summary_20250916_035420.json  summary_master.json
models/: README.md  cent_resnet18.pth  cent_resnet50.pth  class_resnet18.pth  class_resnet50.pth
pulse-simulation-main/pulse-simulation-main/: .gitignore  README.md  pyproject.toml
pulse-simulation-main/pulse-simulation-main/config/: config_template.ini  frb_search.dockerfile
pulse-simulation-main/pulse-simulation-main/frb_search/: candidates.py  converter.py  frb_search.py  periodicity.py  plot_waterfall.py  search_gui.py
scripts/: analyze_slice_config.py  bursts_mjd.csv  duration_files.py  fix_slice_config.py  get_exact_duration.py  headers_fits.py  presto_waterfaller_headless.py  process_large_file.py  run_chunked_pipeline_v2.py  show_duration.py
slice_len/: configure_slice_len.py  test_dynamic_slice_len.py
src/: __init__.py  config.py  detection_engine.py  user_config.py
tests/: analyze_slice_discrepancy.py  calcular_slices_1000ms.py  conftest.py  debug_slice_len_calculation.py  demo_chunks_with_frbs.py  demo_frequency_display.py  demo_logging_detallado.py  demo_muestra_visualizacion.py  demo_visual_simple.py  demo_visual_waterfalls.py  ejemplo_config_simple.py  ejemplo_dm_dinamico_integrado.py  ejemplo_optimizacion_carpetas.py  ejemplo_uso_automatico.py  test_automatic_parameters.py  test_basic_chunk.py  test_candidate.py  test_chunk_corrections.py  test_chunk_in_titles.py  test_chunk_timing.py  test_chunk_timing_debug.py  test_chunking_info.py  test_chunks_with_frbs.py  test_composite_dimensions.py  test_consistency_fixes.py  test_continuidad_temporal_final.py  test_corrected_slice_len.py  test_data_loading.py  test_detailed_chunking_logging.py  test_detection_debug.py  test_directory_structure.py  test_dm_consistency.py  test_dm_dynamic_integration.py  test_dm_pipeline_consistency.py  test_dm_plots.py  test_dynamic_dm_range.py  test_error_fixes.py  test_final_corrections.py  test_fixes_composite_plots.py  test_frequency_display.py  (+29 more)
(+265 files in other folders)
