[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DRAFTS"
version = "3.0.0"
description = "Pipeline Modular de Detección de FRB (Fast Radio Bursts) - Sistema de detección automática de ráfagas de radio rápidas usando aprendizaje profundo"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yong-Kun Zhang", email = "ykzhang@nao.cas.cn"}
]
maintainers = [
    {name = "Sebastian Salgado", email = "sebastian.salgadop@usm.cl"}
]
keywords = [
    "astronomy", 
    "radio-astronomy", 
    "frb", 
    "fast-radio-bursts",
    "machine-learning", 
    "deep-learning",
    "neural-networks",
    "pipeline",
    "detection",
    "signal-processing",
    "dedispersion",
    "pulsar",
    "transient-detection"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Signal Processing",
]
requires-python = ">=3.8"
dependencies = [
    # Core scientific computing
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    
    # Astronomy and data formats
    "astropy>=5.0.0",
    "fitsio>=1.1.0",
    
    # Deep learning and computer vision
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "opencv-python>=4.5.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "timm>=0.6.0",
    
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    
    # Performance optimization
    "numba>=0.56.0",
    
    # Configuration and utilities
    "PyYAML>=6.0",
    "tqdm>=4.62.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.19.0",
    "ruff>=0.0.270",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
    "myst-parser>=0.18.0",
    "nbsphinx>=0.8.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pytest-xdist>=2.5.0",
    "pytest-benchmark>=4.0.0",
    "pytest-timeout>=2.0.0",
]
gpu = [
    "torch>=1.9.0+cu111",
    "torchvision>=0.10.0+cu111",
    "numba>=0.56.0",
]
training = [
    "albumentations>=1.3.0",
    "tensorboard>=2.10.0",
    "wandb>=0.13.0",
]
full = [
    "DRAFTS[dev,docs,test,gpu,training]",
]

[project.urls]
Homepage = "https://github.com/zhangyongkun/DRAFTS"
Documentation = "https://drafts.readthedocs.io/"
Repository = "https://github.com/zhangyongkun/DRAFTS.git"
"Bug Tracker" = "https://github.com/zhangyongkun/DRAFTS/issues"
"Source Code" = "https://github.com/zhangyongkun/DRAFTS"
"Paper" = "https://doi.org/10.1093/mnras/stad1234"

[project.scripts]
drafts = "DRAFTS.cli:main"

[project.gui-scripts]
drafts-gui = "DRAFTS.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["DRAFTS*"]
exclude = [
    "tests*", 
    "docs*", 
    "examples*", 
    "evaluation*",
    "legacy*",
    "pulse-simulation-main*",
    "training*",
    "venv*",
    "venv_drafts*"
]

[tool.setuptools.package-data]
DRAFTS = [
    "config/*.yaml", 
    "config/*.yml",
    "models/*.pth",
    "models/*.pt",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | venv_drafts
  | build
  | dist
  | evaluation
  | legacy
  | pulse-simulation-main
  | training
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["DRAFTS"]
known_third_party = [
    "numpy", "scipy", "matplotlib", "astropy", "torch", "torchvision", 
    "yaml", "pandas", "sklearn", "cv2", "tqdm", "psutil", "fitsio",
    "seaborn", "skimage", "timm", "numba"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "cv2.*",
    "sklearn.*",
    "astropy.*",
    "fitsio.*",
    "numba.*",
    "timm.*",
    "skimage.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "large_data: marks tests that require large data files",
    "memory_intensive: marks tests that are memory intensive",
]

[tool.coverage.run]
source = ["DRAFTS"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/\.venv/*",
    "*/\.env/*",
    "*/evaluation/*",
    "*/legacy/*",
    "*/training/*",
    "*/pulse-simulation-main/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest-benchmark]
min_rounds = 5
warmup = true
disable_gc = true
timer = "time.perf_counter"

[tool.sphinx]
project = "DRAFTS"
copyright = "2024, DRAFTS Team"
author = "DRAFTS Team"
version = "3.0.0"
release = "3.0.0"
extensions = [
    "sphinx.ext.autodoc",
    "sphinx.ext.napoleon",
    "sphinx.ext.viewcode",
    "sphinx.ext.intersphinx",
    "sphinx_rtd_theme",
    "sphinx_autodoc_typehints",
    "myst_parser",
    "nbsphinx",
]
templates_path = ["_templates"]
exclude_patterns = ["_build", "Thumbs.db", ".DS_Store"]
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
intersphinx_mapping = {
    "python": ("https://docs.python.org/3", None),
    "numpy": ("https://numpy.org/doc/stable", None),
    "scipy": ("https://docs.scipy.org/doc/scipy", None),
    "matplotlib": ("https://matplotlib.org/stable", None),
    "astropy": ("https://docs.astropy.org/en/stable", None),
    "torch": ("https://pytorch.org/docs/stable", None),
    "pandas": ("https://pandas.pydata.org/docs", None),
}

[tool.pre-commit]
repos = [
    {
        repo = "https://github.com/pre-commit/pre-commit-hooks",
        rev = "v4.4.0",
        hooks = [
            {id = "trailing-whitespace"},
            {id = "end-of-file-fixer"},
            {id = "check-yaml"},
            {id = "check-added-large-files"},
            {id = "check-merge-conflict"},
            {id = "check-case-conflict"},
        ],
    },
    {
        repo = "https://github.com/psf/black",
        rev = "23.3.0",
        hooks = [{id = "black"}],
    },
    {
        repo = "https://github.com/pycqa/isort",
        rev = "5.12.0",
        hooks = [{id = "isort"}],
    },
    {
        repo = "https://github.com/pycqa/flake8",
        rev = "6.0.0",
        hooks = [{id = "flake8"}],
    },
    {
        repo = "https://github.com/pre-commit/mirrors-mypy",
        rev = "v1.3.0",
        hooks = [{id = "mypy"}],
    },
]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "S",  # bandit
    "A",  # flake8-builtins
    "COM", # flake8-commas
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "S101",  # assert used
    "S603",  # subprocess call
    "S607",  # subprocess call with shell=True
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011", "S101"]
"training/*" = ["E501", "C901"]
"evaluation/*" = ["E501", "C901"]

[tool.ruff.isort]
known-first-party = ["DRAFTS"] 